--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="trex-uploader.css" rel="stylesheet" />
-    <script src="uploader-app.js?ts=1555"></script>
+    <script src="uploader-app.js?ts=1556"></script>
   </head>
   <body>
 
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group">
           <label for="theFile">Example file input</label>
-          <input type="file" class="form-control-file" id="theFile">
+          <input type="file" class="form-control-file" id="theFile" name="file">
         </div>
         <button class="btn btn-success">Submit</button>
 
@@ -55,89 +55,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script>
-
-    const urlImport = 'http://localhost:3000/import';
-    const idFacility = 'theFacilityid';
-    const idPeriod = 'thePeriod';
-
     window.addEventListener( 'load', function () {
-      const file = {
-            dom    : document.getElementById( "theFile" ),
-            binary : null
-          };
-      const reader = new FileReader();
-      reader.addEventListener( "load", function () {
-        file.binary = reader.result;
-      } );
-      // At page load, if a file is already selected, read it.
-      if( file.dom.files[0] ) {
-        reader.readAsBinaryString( file.dom.files[0] );
-      }
-      // If not, read the file once the user selects it.
-      file.dom.addEventListener( "change", function () {
-        if( reader.readyState === FileReader.LOADING ) {
-          reader.abort();
-        }
-        reader.readAsBinaryString( file.dom.files[0] );
-      } );
-
-      function sendUploadFormData() {
-        // If there is a selected file, wait it is read
-        // If file is not loaded, delay are call itself
-        if( !file.binary && file.dom.files.length > 0 ) {
-          setTimeout( sendUploadFormData, 10 );
-          return;
-        }
-        // We need a separator to define each part of the request
-        const boundary = "blob123";
-        let data = "";
-        if ( file.dom.files[0] ) {
-          data += "--" + boundary + "\r\n";
-          data += 'content-disposition: form-data; '
-                + 'name="'         + file.dom.name          + '"; '
-                + 'filename="'     + file.dom.files[0].name + '"\r\n';
-          data += 'Content-Type: ' + file.dom.files[0].type + '\r\n';
-          data += '\r\n';
-          data += file.binary + '\r\n';
-        }
-        // -----------------
-        // Period - Start a new part in our body's request
-        const facilitySelector = document.getElementById( idFacility );
-        data += "--" + boundary + "\r\n";
-        // Say it's form data, and name it
-        data += 'content-disposition: form-data; name="' + facilitySelector.name + '"\r\n';
-        // There's a blank line between the metadata and the data
-        data += '\r\n';
-        data += facilitySelector.value + "\r\n";
-        // -----------------
-        // Period - Start a new part in our body's request
-        const periodSelector = document.getElementById( idPeriod );
-        data += "--" + boundary + "\r\n";
-        // Say it's form data, and name it
-        data += 'content-disposition: form-data; name="' + periodSelector.name + '"\r\n';
-        // There's a blank line between the metadata and the data
-        data += '\r\n';
-        data += periodSelector.value + "\r\n";
-        // -----------------
-        // Once we are done, "close" the body's request
-        data += "--" + boundary + "--";
-        const XHR = new XMLHttpRequest();
-        XHR.addEventListener( 'load', function( event ) {
-          alert( 'Yeah! Data sent and response loaded.' );
-        } );
-        XHR.addEventListener( 'error', function( event ) {
-          alert( 'Oops! Something went wrong.' );
-        } );
-        XHR.open( 'POST', urlImport );
-        XHR.setRequestHeader( 'Content-Type','multipart/form-data; boundary=' + boundary );
-        XHR.send( data );
-      }
-
-      const form = document.getElementById( "data-upload" );
-      form.addEventListener( 'submit', function ( event ) {
-        event.preventDefault();
-        sendUploadFormData();
-      } );
-    } )
+      uploadProcesor.init();
+    });
   </script>
 </html>
