--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -56,6 +56,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script>
     window.addEventListener( 'load', function () {
+      uploadProcesor.urlImport = 'http://localhost:3000/import';
       uploadProcesor.init();
     });
   </script>
