--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -2,19 +2,27 @@
 <html lang="en">
   <head>
     <title>TRex Data Uploder</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
     <link href="trex-uploader.css" rel="stylesheet" />
     <script src="uploader-app.js?ts=1556"></script>
   </head>
   <body>
-
     <div class="container">
       <div class="jumbotron pt-3">
         <h1 class="display-4">TRex Data Uploder</h1>
       </div>
     </div>
+
     <div class="container" id="import-page">
       <form id="data-upload">
         <div class="form-group">
@@ -42,21 +50,36 @@
         </div>
         <div class="form-group">
           <label for="theFile">Example file input</label>
-          <input type="file" class="form-control-file" id="theFile" name="file">
+          <input
+            type="file"
+            class="form-control-file"
+            id="theFile"
+            name="file"
+          />
         </div>
         <button class="btn btn-success">Submit</button>
-
       </form>
     </div>
-    <section id="dynamic">
-    </section>
+    <section id="dynamic"></section>
   </body>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"
+  ></script>
   <script>
-    window.addEventListener( 'load', function () {
-      uploadProcesor.urlImport = 'http://localhost:3000/import';
+    window.addEventListener("load", function () {
+      uploadProcesor.urlImport = "http://localhost:3000/import";
       uploadProcesor.init();
     });
   </script>
