Updated import endpoint URL

--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -105,7 +105,7 @@
   <script>
     window.addEventListener("load", function () {
 
-      uploadProcesor.urlImport = "http://localhost:3000/import";
+      uploadProcesor.urlImport = "https://localhost:44373/import";
 
       progressPageProcesor.hide();
       reportPageProcesor.hide();
