Added test results data

--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -14,7 +14,8 @@
       crossorigin="anonymous"
     />
     <link href="trex-uploader.css" rel="stylesheet" />
-    <script src="uploader-app.js?ts=1556"></script>
+    <script src="uploader-app.js?ts=1600"></script>
+    <script src="test-report-data.js?ts=1006"></script>
   </head>
   <body>
     <div class="container">
