--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -26,11 +26,12 @@
 
     <div class="container" id="report-page">
       <p class="lead text-center">
-        TRex report page
+        Data validation results:
       </p>
-      <p class="lead text-center">
-        empty placeholder ... (under construction)
-      </p>
+      <div class="alert alert-dark text-center" role="alert">
+        <a class="h4" href="#">Open Data Live Editor</a>
+        <div>#token#</div>
+      </div>
     </div>
 
     <div class="container" id="progress-page">
