Fixed missing uploadid

--- a/TRexUploader/index.html
+++ b/TRexUploader/index.html
@@ -111,6 +111,7 @@
 
       uploadPageProcesor.onSucsses = () => {
         progressPageProcesor.uploadId=uploadPageProcesor.uploadid;
+        reportPageProcesor.uploadId=uploadPageProcesor.uploadid;
         uploadPageProcesor.hide();
         progressPageProcesor.show();
       }
